<resources>
    <string name="app_name">Green Light</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub_main">Green Light</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location">Location</string>
    <string name="cash_out">Cash out</string>
    <string name="title_education">Education</string>
</resources>
