<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/ic_input_black_24dp"
        android:title="@string/cash_out" />
    
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_money"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/title_dashboard" />


    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_education"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_education" />



</menu>
